nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actions-runner-ingress
  namespace: actions-runner-system
  # annotations:
  #   cert-manager.io/issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - 4225-67-68-241-122.ngrok-free.app
  #   secretName: tls-secret
  rules:
    - host: 4225-67-68-241-122.ngrok-free.app
      http:
        paths:
          - path: /actions-webhook
            pathType: Prefix
            backend:
              service:
                name: actions-runner-controller-github-webhook-server
                port:
                  number: 80
